--- a/RDS/python-scripts/database.ini
+++ b/RDS/python-scripts/database.ini
@@ -8,7 +8,7 @@ password=dVgy7KfJfjHzACe
 [master]
 host=database-jumiatest.c4udiukeis6n.us-east-1.rds.amazonaws.com
 port=5432
-database=database-jumiatest
+database=jumia-app
 user=jumia
 password=dVgy7KfJfjHzACe
 
